build/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: K8S_PROJECT_NAME-nginx
  namespace: K8S_NAMESPACE
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    name: K8S_PROJECT_NAME-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: K8S_PROJECT_NAME-php-fpm
  namespace: K8S_NAMESPACE
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    name: K8S_PROJECT_NAME-php-fpm
